apps/goatlint/src/snapshots/_fixtures__cli__svelte__debugger.svelte@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: fixtures/cli/svelte/debugger.svelte
working directory: 
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/svelte/debugger.svelte:2:2]
 1 | <script>
 2 |     debugger;
   :     ^^^^^^^^^
 3 | 
   `----
  help: Remove the debugger statement

  ! eslint(no-unassigned-vars): 'title' is always 'undefined' because it's never assigned.
   ,-[fixtures/cli/svelte/debugger.svelte:4:13]
 3 | 
 4 |     export let title;
   :                ^^^^^
 5 |     export let person;
   `----
  help: Variable declared without assignment. Either assign a value or remove the declaration.

  ! eslint(no-unassigned-vars): 'person' is always 'undefined' because it's never assigned.
   ,-[fixtures/cli/svelte/debugger.svelte:5:13]
 4 |     export let title;
 5 |     export let person;
   :                ^^^^^^
 6 | 
   `----
  help: Variable declared without assignment. Either assign a value or remove the declaration.

Found 3 warnings and 0 errors.
Finished in <variable>ms on 1 file with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
